--- a/index1.html
+++ b/index1.html
@@ -167,7 +167,7 @@
 
         <ul class="navbar-list">
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="window.location.href='http://127.0.0.1:5500/index.html'">Contact</button>
+            <button class="navbar-link" data-nav-link onclick="window.location.href='https://mrjtk.github.io/Jatin_potplyo/index.html'">Contact</button>
           </li>
 
         </ul>
