--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </li>          
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link onclick="window.location.href='https://mrjtk.github.io/Jatin_potplyo/index1.html'">Service</button>
+            <button class="navbar-link" data-nav-link onclick="window.location.href='https://mrjtk.github.io/Jatin_portfolio/index1.html'">Service</button>
           </li>
 
           <li class="navbar-item">
