--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <section class="about-text">
           <p>
-            I am a Cyber Security Researcher at a leading firm in Mumbai, India, excelling as a Cyber Security Consultant. I thrive on the thrill of uncovering hidden vulnerabilities in websites and organizations, and I ethically report these findings to bolster their security to the highest standards.
+            I am a Cyber Security Researcher at a leading firm in Pune, India, excelling as a Cyber Security Consultant. I thrive on the thrill of uncovering hidden vulnerabilities in websites and organizations, and I ethically report these findings to bolster their security to the highest standards.
           </p>
 
           <p>
