--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
         <section class="about-text">
           <p>
-            I am a Cyber Security Researcher at a leading firm in Pune, India, excelling as a Cyber Security Consultant. I thrive on the thrill of uncovering hidden vulnerabilities in websites and organizations, and I ethically report these findings to bolster their security to the highest standards.
+            OSCP-certified Cybersecurity Researcher, currently serving as CTO at Scan Infoga. With around 2 years of hands-on experience in VAPT, red teaming, and security automation, I specialize in identifying and ethically exploiting complex vulnerabilities across web, mobile, and API environments. I actively contribute to bug bounty programs, mentor aspiring cybersecurity professionals, and help organizations enhance their security posture through real-world attack simulations.
           </p>
 
           <p>
