--- a/index.html
+++ b/index.html
@@ -526,10 +526,21 @@
 
               <h4 class="h4 timeline-item-title">Cyber Security Consultant</h4>
               
-              <span>SecureLayer7 2024 - Present</span>
+              <span>SecureLayer7 2024 - 2025</span>
 
               <p class="timeline-text">
                 As a Cyber Security Consultant, I protect organizations from cyber threats by conducting security assessments, identifying vulnerabilities, and implementing robust solutions. I thrive on uncovering hidden security flaws and staying ahead of cyber criminals through continuous learning.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Chief Technology Officer</h4>
+              
+              <span>Scaninfoga - Sulotion Pvt Ltd</span>
+
+              <p class="timeline-text">
+                As CTO at Scan Infoga, I oversee and execute penetration testing across web, mobile, API, and cloud environments. I actively lead red teaming engagements, develop automation tools to improve testing efficiency, and manage a skilled security team to ensure the delivery of high-quality assessments. I also collaborate with clients to understand their security needs and provide tailored solutions while continuously enhancing our internal methodologies to stay ahead of evolving threats.
               </p>
 
             </li>
